chore: refactor api docs responses.
