# app/Http/Controllers/Api/Auth/LoginController.php
@@ -3,6 +3,7 @@
 namespace App\Http\Controllers\Api\Auth;
 
 use App\Http\Controllers\Controller;
+use App\Http\Helpers\ApiResponse;
 use App\Http\Requests\LoginRequest;
 use Illuminate\Http\Response;
 use Illuminate\Support\Facades\Auth;
@@ -16,8 +17,6 @@ use Illuminate\Support\Facades\Auth;
 class LoginController extends Controller
 {
     /**
-     * Login.
-     *
      * @OA\Post(
      *     path="/api/auth/login",
      *     summary="Login",
@@ -32,15 +31,30 @@ class LoginController extends Controller
      *         description="Successful login",
      *         @OA\JsonContent(
      *             @OA\Property(property="message", type="string", example="Success login"),
-     *             @OA\Property(property="access_token", type="string", example="your-access-token")
+     *             @OA\Property(
+     *                 property="data",
+     *                 type="object",
+     *                 @OA\Property(
+     *                     property="access_token",
+     *                     type="string",
+     *                     example="your-access-token"
+     *                 )
+     *             )
      *         )
      *     ),
      *     @OA\Response(
      *         response=401,
      *         description="Unauthorized",
      *         @OA\JsonContent(
-     *             @OA\Property(property="errors", type="object", example={"email": {"Invalid credentials"}}),
-     *             @OA\Property(property="message", type="string", example="Invalid credentials")
+     *             @OA\Property(property="error", type="string", example="Invalid credentials"),
+     *             @OA\Property(property="data",
+     *                 type="object",
+     *                 @OA\Property(
+     *                     property="errors",
+     *                     type="object",
+     *                     example={"email": {"Invalid credentials"}}
+     *                 )
+     *             )
      *         )
      *     )
      * )
@@ -48,21 +62,26 @@ class LoginController extends Controller
     public function __invoke(LoginRequest $request)
     {
         if (!Auth::attempt($request->only('email', 'password'))) {
-            return response()->json([
-                'errors' => [
-                    'email' => [
-                        'Invalid credentials',
-                    ]
+            return ApiResponse::success(
+                data: [
+                    'errors' => [
+                        'email' => [
+                            'Invalid credentials',
+                        ]
+                    ],
+                    'message' => 'Invalid credentials'
                 ],
-                'message' => 'Invalid credentials'
-            ], Response::HTTP_UNAUTHORIZED);
+                statusCode: Response::HTTP_UNAUTHORIZED
+            );
         }
 
         $accessToken = Auth::user()->createToken('access_token')->plainTextToken;
 
-        return response()->json([
-            'message' => 'Success login',
-            'access_token' => $accessToken,
-        ], Response::HTTP_OK);
+        return ApiResponse::success(
+            message: "Success Login",
+            data: [
+                'access_token' => $accessToken,
+            ]
+        );
     }
 }
